# thoth

./: .gitignore  .pre-commit-config.yaml  README.md  dune-project  output.txt  ralang.opam  thoth.opam
example/: test.ra
examples/: chat.ra  chat.ralang  chat.thoth  kanban.ralang  kanban.thoth  test.ra  todo.ra  todo.ralang  todo.thoth  tutorial.ralang
language_tools/ralang-syntax-highlighting/: CHANGELOG.md  README.md  example.json  language-configuration.json  package.json  vsc-extension-quickstart.md
language_tools/ralang-syntax-highlighting/syntaxes/: ralang.tmLanguage.json
language_tools/thoth-syntax-highlighting/: CHANGELOG.md  README.md  language-configuration.json  package.json  vsc-extension-quickstart.md
language_tools/thoth-syntax-highlighting/syntaxes/: thoth.tmLanguage.json
ralang/: .pre-commit-config.yaml  dune-project
ralang/src/analyzer/: dune
ralang/src/generator/: dune
ralang/test/: dune
src/: dune
src/analyzer/: ast.ml  dune  error.ml  evaluator.ml  lexer.mll  parser.mly  parser_helper.ml  pprint.ml  pprinter.ml  symbol_table.ml  syntax.ml  type_checker.ml
src/analyzer/ast/: ast_types.ml  ast_types.mli  dune  filtered_ast.ml  filtered_ast.mli  formatter.ml  helper.ml  pprinter.ml  pprinter.mli
src/analyzer/lexer/: dune
src/app_specs/: db_specs.ml  dune  general_specs.ml
src/generator/: app_generator.ml  app_generator.mli  client_generator.ml  db_generator.ml  db_generator.mli  dune  file_generator.ml  file_generator.mli  server_generator.ml  server_generator.mli  ui_generator.ml
src/specs/: app_specs.ml  app_specs.mli  client_specs.ml  db_specs.ml  db_specs.mli  dune  helper.ml  helper.mli  server_specs.ml  server_specs.mli  ui_specs.ml
templates/client/: .env  .env.jinja  .eslintrc.json  .prettierrc  index.html  index.jinja  package.jinja  package.json  tsconfig.json  vite.config.js  vite.config.ts
templates/db/: schema.jinja  schema.prisma
templates/server/: .env.jinja  .eslintrc.json  .prettierrc  app.js  nodemon.json  package.jinja  package.json  tsconfig.json
test/: dune
(+111 files in other folders)
